Integrate: Jimbo's stuff

--- a/constraints.tex
+++ b/constraints.tex
@@ -1,18 +1,73 @@
 % Section 3 in file constraints.tex
 
-\todo{EXPAND: as per Richie's advice to use the PPT for section}
-
 % Section 3.1
-\subsection{Economic Factors}
+\subsection{Economic Constraints}
+Economic constraints are the biggest hindrance in the development of WHCS. The
+amount of money necessary to complete such a project adds up quickly due to the
+necessity of obtaining hardware like printed circuit boards. This project is
+being developed by college students so the amount of reserve money that is
+available is low. The average full{}-time student schedule can obstruct
+students from having time to earn extra money. To help alleviate the lack of
+funds our group applied for funding through Boeing. Boeing was kind enough to
+approve our application for WHCS. Unfortunately we did not get all the money
+that we asked for which means part of the project will have to be paid for out
+of pocket.  This will especially be an issue if things go wrong during the
+development process that cause us to have to repurchase certain pieces of
+hardware. In all of our design time decisions cost plays the biggest factor.
+Our research and development budget is small compared to mass{}-produced
+products similar to WHCS. We have recognized this constraint from the offset
+and we plan accordingly.
 
 % Section 3.2
 \subsection{Time Limitations}
+The amount of time that we have to create WHCS is a limiting factor for what we
+are trying to create. To begin with, the technologies used in this project are
+not something that we were already well{}-versed in before starting. There was
+a ramp{}-up period for figuring out what technologies would be necessary to
+implement a system with the capabilities we desired. This is not even including
+the research time necessary for finding exact chips that fit each of the
+requirements we needed. During the development lifecycle of the project we are
+not just creating WHCS we are learning things necessary to design in general
+such as creating PCB layouts. Learning things like this, necessary to actually
+create parts of the project take a measurable chunk of time to do. To add on
+top of the ramp{}-up time that we have to endure, we will be missing valuable
+weeks due to the summer semester. Our second semester of senior design will
+take place in the summer semester which is 12 weeks instead of the normal 16
+weeks of a semester. This means that we lose out on almost an entire month due
+to the second half of development being in the summer. This whole month of lost
+time will put a large strain on the group and it is something that we have
+accounted for early on.
 
-% Section 3.2.1
-\subsubsection{Project Ramp-up}
+\subsection{Political Constraints}
+There are no relevant political constraints that we have attributed to the
+development of WHCS. The development of WHCS is not aligned with the ideals of
+any political party. Our research results showed that there is not noticeable
+political involvement in products similar to ours.
 
-% Section 3.2.2
-\subsubsection{Summer Semester}
+\subsection{Ethical, Environmental, and Sustainability Constraints}
+The discussion of ethical constraints for WHCS is directly related to
+environmental awareness and sustainability. The most ethically bearing
+decisions we have had to make during the development of our system involve
+power usage. There is no doubt that power usage has a vast effect on the
+environment. While developing WHCS our goal when faced with multiple options
+for implementation is to take the path which results in the least power
+consumed. For example, the type of electronic strike we chose was based on
+which one wasted less power during operation. We believe that making decisions
+in this area to help the environment and promote sustainability give us the
+best ethical outlook. This is also the only ethical involvement we have
+attributed to our project.
+
+\subsection{Manufacturability Constraints}
+
+WHCS will have the potential to be implemented in many homes as long as
+consideration is put into manufacturability during design time. As we make
+decisions for our system we are constantly monitoring how it affects the
+overall ease of replication. We have identified the base station PCB and
+control module PCBs to be the biggest contributors of our overall
+manufacturability. In order to maximize manufacturability we have constrained
+ourselves to only using highly available parts for incorporation into our PCB
+designs. Following through with this commitment will ensure that WHCS
+installations will be standardized and easy to replicate.
 
 % Section 3.3
 \subsection{Safety and Security}
