--- a/desc.tex
+++ b/desc.tex
@@ -161,6 +161,35 @@ statistics for display to the user.
 
 % Section 2.4.1
 \subsubsection{Z-Wave}
+Z{}-Wave is a wireless technology that serves as a building foundation for home
+automation technologies. It is a certain type of home technology networking
+standard. The idea is that any component for the home that carries the Z{}-Wave
+logo is interoperable with any other Z{}-Wave product. Certain vendors
+implement Z{}-Wave into their technology to give their products a wide appeal.
+Z{}-Wave is not a full home automation solution, it is merely the basis for
+wireless home automation products. Vendors like Schlage create components for
+the home that are compatible with Z{}-Wave networks.  For example Schlage
+offers a door lock that can be controlled from a mobile phone due to its
+implementation of Z{}-Wave technology.
+
+In relation to our product Z{}-Wave is similar to our
+implementation of a wireless network. Our Wireless Home Control System will
+feature radio transceivers that use a proprietary protocol to exchange
+information. Only components within our system will be able to communicate
+within the network. The network will also allow user{}'s mobile phones to join
+in. So WHCS implements a tiny version of Z{}-Wave within the whole product.
+Z{}-Wave takes the networking to an extreme and offers it as a platform for
+vendors to create home automation equipment. For WHCS the network is a means to
+get our home automation equipment to communicate with each other instead of
+providing a foundation for others to build into.
+
+{\color{black}
+Z{}-Wave has a great feature called {}``scenes.'' Scenes allow users to create groups of devices around the house and
+specify certain states for those devices that can be activated at the touch of a button. WHCS will also implement a
+feature similar to this. With the ability to control multiple devices around the home it will be a common use case for
+the user to change the state of the system to certain common configurations. For example, a user might want to turn off
+all the lights in the house with a {}``sleep mode{}'' every night. This will be achievable through the hardware that
+WHCS will create for the house.}
 
 % Section 2.4.2
 \subsubsection{Belkin}
