--- a/toc.tex
+++ b/toc.tex
@@ -18,35 +18,39 @@
 \import{./}{system.tex}
 
 % Section 5
+\section{Summary of Related Standards}
+\label{sec:stds}
+\import{./}{stds.tex}
+
+% Section 6
 \section{Hardware and Software Design}
 \import{./}{hwsw.tex}
 
-\todo{SECTION: add ``Summary of Related Standards'' and merely reference them}
-% Section 6
+% Section 7
 \section{Printed Circuit Board}
 \import{./}{pcb.tex}
 
-% Section 7
+% Section 8
 \section{Prototyping}
 \import{./}{proto.tex}
 
-% Section 8
+% Section 9
 \section{Manufacturing}
 \import{./}{mfg.tex}
 
-% Section 9
+% Section 10
 \section{Testing}
 \import{./}{test.tex}
 
-% Section 10
+% Section 11
 \section{Demos}
 \import{./}{demo.tex}
 
-% Section 11
+% Section 12
 \section{Project Management}
 \import{./}{manage.tex}
 
-% Section 12
+% Section 13
 \section{Appendix}
 \import{./}{appendix.tex}
 
