--- a/whcs.tex
+++ b/whcs.tex
@@ -23,6 +23,8 @@
 
 % Common color names
 \usepackage[usenames,svgnames]{xcolor}
+% For \textsubscript
+\usepackage{fixltx2e}
 % For meeting senior design specifications
 \usepackage{parskip}
 % For easy importing of documents
